--- a/redux/package.json
+++ b/redux/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/table": "^2.0.40",
+    "@reduxjs/toolkit": "^2.3.0",
+    "framer-motion": "^11.11.10",
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
